--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3092,8 +3092,9 @@ a:visited {
   outline: none;
   width: 100%;
   background-color: #f1f1f1;
-  height: 77px;
-  font-size: 16px;
+  height: 45px;
+  font-size: 15px;
+  font-family: roboto;
   color: #81868a;
   font-weight: 500;
   padding-left: 40px;
@@ -3104,21 +3105,25 @@ a:visited {
 .become-teacher__form input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   color: #81868a;
+  font-family: roboto;
 }
 
 .become-teacher__form input::-moz-placeholder {
   /* Firefox 19+ */
   color: #81868a;
+  font-family: roboto;
 }
 
 .become-teacher__form input:-ms-input-placeholder {
   /* IE 10+ */
   color: #81868a;
+  font-family: roboto;
 }
 
 .become-teacher__form input:-moz-placeholder {
   /* Firefox 18- */
   color: #81868a;
+  font-family: roboto;
 }
 
 .become-teacher__form-btn {
