changed fonts and colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@
 * 1. common styles
 */
 body {
-  font-family: "Poppins";
+  font-family: 'Roboto', sans-serif;
   color: #81868a;
   font-size: 16px;
   line-height: 34px;
@@ -93,7 +93,7 @@ a:visited {
   vertical-align: middle;
   border: none;
   outline: none;
-  background-color: #f16101;
+  background-color: #dc3545;
   font-size: 15px;
   font-weight: bold;
   color: #fff;
@@ -736,7 +736,7 @@ a:visited {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #2da397;
+  background-color: #022C46;
   font-size: 18px;
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
@@ -1245,7 +1245,7 @@ a:visited {
 .banner-one__cta {
   width: 100%;
   max-width: 544px;
-  background-color: #2da397;
+  background-color: #dc3545;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -3177,7 +3177,7 @@ a:visited {
 }
 
 .course-one__carousel .color-1 .course-one__category {
-  background-color: #7c4bc0;
+  background-color: #022C46;
 }
 
 .course-one__carousel .color-2 .course-one__category {
@@ -4240,7 +4240,7 @@ a:visited {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  background-color: #2da397;
+  background-color: #dc3545;
   padding-bottom: 188px;
 }
 
@@ -5059,8 +5059,9 @@ a:visited {
 }
 
 .footer-widget__btn-block .thm-btn:nth-child(2) {
-  background-color: #2da397;
-  margin-left: 10px;
+    background-color: #fff;
+    margin-left: 10px;
+    color: #000;
 }
 
 .footer-widget__btn-block .thm-btn:nth-child(2):hover {
@@ -5621,7 +5622,7 @@ a:visited {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  background-color: #2da397;
+  background-color: #022C46;
 }
 
 .blog-two:after {
@@ -6560,7 +6561,7 @@ a:visited {
   text-align: center;
   width: 156px;
   height: 156px;
-  background-color: #f16101;
+  background-color: #dc3545;
   border-radius: 50%;
   position: relative;
 }
@@ -7080,7 +7081,7 @@ a:visited {
 * 23. mailchimp styles
 */
 .mailchimp-one {
-  background-color: #f16101;
+  background-color: #fff;
   padding: 120px 0;
 }
 
@@ -7138,7 +7139,7 @@ a:visited {
 
 .mailchimp-one__title {
   margin: 0;
-  color: #fff;
+  color: #000;
   font-size: 40px;
   font-weight: 700;
   letter-spacing: -.04em;
@@ -7154,7 +7155,7 @@ a:visited {
   background-color: transparent;
   width: 100%;
   height: 77px;
-  background-color: #fff;
+  background-color: #dc354633;
   color: #81868a;
   font-size: 16px;
   padding-left: 30px;
@@ -7181,7 +7182,7 @@ a:visited {
 }
 
 .mailchimp-one__form .thm-btn {
-  background-color: #012237;
+  background-color: #dc3545;
   color: #fff;
   padding: 0;
   line-height: 77px;
