--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,11 +57,11 @@ a:visited {
 }
 
 .thm-base-bg {
-  background-color: #f16101;
+  background-color: #dc3545;
 }
 
 .thm-base-bg-2 {
-  background-color: #2da397;
+  background-color: #022C46;
 }
 
 .thm-gray-bg {
@@ -2102,7 +2102,7 @@ a:visited {
 * 7. cta styles
 */
 .cta-one {
-  background-color: #f16101;
+  background-color: #dc3545;
   padding-top: 101.5px;
   padding-bottom: 101.5px;
 }
@@ -2151,7 +2151,7 @@ a:visited {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #f16101;
+  background-color: #dc3545;
   opacity: 0.9;
 }
 
@@ -2252,8 +2252,8 @@ a:visited {
 
 .cta-two__btn {
   font-size: 16px;
-  color: #fff;
-  background-color: #012237;
+  color: #000;
+  background-color: #fff;
   padding: 16.5px 47.5px;
   margin-top: 35px;
 }
@@ -6821,7 +6821,7 @@ a:visited {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #f16101;
+  background-color: #022C46;
   position: relative;
   margin-left: auto;
   margin-right: auto;
