--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4240,7 +4240,7 @@ a:visited {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  background-color: #dc3545;
+  background-color: #022C46;
   padding-bottom: 188px;
 }
 
